# order_picking

./: .gitignore  pyproject.toml
frontend/src/: B2BPick.vue
order_picking/: hooks.py  jinja.py  setup.py
order_picking/api/: api.py
order_picking/order_picking/doctype/order_pick/: order_pick.json
order_picking/order_picking/print_format/b2b_pick_report_summary/: b2b_pick_report_summary.json
order_picking/order_picking/print_format/customer_invoice/: customer_invoice.html  customer_invoice.json
order_picking/order_picking/print_format/sales_invoice_pick_list/: sales_invoice_pick_list.html  sales_invoice_pick_list.json
order_picking/public/js/: b2b_pick_report.js  sales_invoice.js
